# ASAERC

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: example.yaml
scripts/: make_raw_data.py  plot_run.py  preprocess_data.py  run_experiment.py
src/asaerc/: __init__.py  data.py  simulation.py
src/asaerc/diagnostics/: __init__.py  corr.py
src/asaerc/readouts/: __init__.py  pde_readout.py
src/asaerc/reservoir/: __init__.py  pde.py
src/asaerc/train/: __init__.py  trainer.py
src/asaerc/utils/: seed.py
